# MParakeet3

./: #config.ini#  .gitignore  CreateMix.py  MParakeet3.py  README.md  add_titles.ps1  convert_to_mp3.ps1  create_mix.ps1  createmix.py  downloadplaylist.py  ffmparakeet.py  jobdata.py  loader.py  mix.py  mparakeet3.py  ottlog.py  partition_large_folders.ps1  pyproject.toml  sconfig.py
